fix(scss): shortcut overflow with some font packs
Fix 7c3ee80

--- a/wowchemy/assets/scss/wowchemy/_search.scss
+++ b/wowchemy/assets/scss/wowchemy/_search.scss
@@ -168,9 +168,10 @@
 }
 
 .sidebar-search-shortcut {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   box-shadow: 0 1px 1px rgba(12,13,14,0.15), inset 0 1px 0 0 #fff;
   flex-shrink: 0;
-  padding: 1px 8px;
+  padding: 1px 12px;
   margin: 0 0 0 10px;
   color: rgba(0,0,0,.6);
   font-size: 1.2rem;
